# Agentic_SentiDemand_Hub

./: .coverage  .gitignore  LICENSE  README.md  findings.md  implementation_plan.md  progress.md  pyproject.toml  requirements.txt  task_plan.md
config/: default.yaml  demand_keywords.json  stopwords.txt
docs/: API.md  API_INTERFACE.md  ARCHITECTURE.md  HUB_RUNBOOK.md  TUTORIAL.md
examples/: basic_usage.py  custom_config.py  my_config.yaml  new_features_demo.py
examples/demo_outputs/sentiment_models/: 007_model_report_svm.txt
learning-docs/: 01-project-structure.md  02-file-details.md  03-module-relations.md  04-tech-highlights.md  05-practical-insights.md  06-learning-roadmap.md
outputs/sentiment_models/: 002_model_report_naive_bayes.txt  003_model_report_svm.txt  004_model_report_logistic_regression.txt
outputs/workspace_runs/099e576e77e9/charts/: demand_network_203509.html  features_bidirectional_203509.html  features_heatmap_203509.html  features_lollipop_203509.html  features_tfidf_scatter_203509.html  sentiment_donut_203509.html  topics_bubble_203509.html  topics_nightingale_203509.html  topics_radar_203509.html
outputs/workspace_runs/099e576e77e9/insights/: advice.md
outputs/workspace_runs/099e576e77e9/logs/: run_summary.txt
outputs/workspace_runs/33a7a673fcea/insights/: advice.md
outputs/workspace_runs/4f934c5ff9e2/logs/: run_summary.txt
outputs/workspace_runs/817e0b14d5fc/logs/: run_summary.txt
src/comment_analyzer/: __init__.py
src/comment_analyzer/core/: __init__.py  config.py  log_manager.py  output_manager.py  pipeline.py  settings.py
src/comment_analyzer/demand/: __init__.py  correlation.py  intensity.py
src/comment_analyzer/insights/: __init__.py  briefing.py
src/comment_analyzer/preprocessing/: __init__.py  cleaner.py  filter.py  segmenter.py
src/comment_analyzer/sentiment/: __init__.py  classifier.py  labeler.py  vectorizer.py
src/comment_analyzer/topic/: __init__.py  keywords.py  lda.py
src/comment_analyzer/visualization/: __init__.py  gallery.py  generator.py  pages.py  run_registry.py
src/comment_analyzer/visualization/charts/: __init__.py  demand.py  features.py  sentiment.py  topics.py
tests/: __init__.py  test_integration.py  test_log_manager.py  test_output_manager.py  test_pipeline.py  test_preprocessing.py  test_run_registry.py  test_sentiment.py  test_settings.py  test_topic.py  test_visualization.py  test_visualization_pages.py
(+13 files in other folders)
